third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/add_assign/unit_struct.rs
#[derive(derive_more::AddAssign)]
struct Foo;

fn main() {}
